--- a/js/community.css
+++ b/js/community.css
@@ -253,7 +253,9 @@ button {
   /* background-image: url("https://images.pexels.com/photos/247676/pexels-photo-247676.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
   background-image: url('https://images.pexels.com/photos/10756669/pexels-photo-10756669.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
   background-image: url('https://images.pexels.com/photos/3374938/pexels-photo-3374938.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
-  background-image: url('https://images.pexels.com/photos/1679719/pexels-photo-1679719.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); */
+  background-image: url('https://images.pexels.com/photos/1679719/pexels-photo-1679719.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+   background-repeat: no-repeat;
+  background-size: cover;  */
   position: relative;
   /* transform: translateY(-100%); */
   height: 100vh;
@@ -328,7 +330,7 @@ margin: 0;
 .hero-img img{
   height: 100%;
   width: 100%;
-  display:flex;
+  object-fit: cover;
   /* overflow: hidden; */
 }
 
@@ -436,9 +438,7 @@ margin: 0;
   font-size: 2rem;
   background-image: linear-gradient(to right, #000000a2, #00000072),url("https://images.pexels.com/photos/720254/pexels-photo-720254.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
   background-image: linear-gradient(to right, #000000a2, #00000072), url("https://images.pexels.com/photos/585759/pexels-photo-585759.jpeg?auto=compress&cs=tinysrgb&w=600");
-  background-image: linear-gradient(to right, #00000087, #00000036), url("https://static.vecteezy.com/system/resources/previews/007/696/703/large_2x/abstract-circle-light-neon-effect-illustration-free-vector.jpg");
-  background-image: linear-gradient(to right, #00000087, #00000036), url("/images/trails.jpg");
-  background-image: linear-gradient(to right, #00000087, #00000036), url("https://images.pexels.com/photos/1679719/pexels-photo-1679719.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+  background-image: linear-gradient(to right, #000000c3, #0000004a), url("/images/galaxyc.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -541,39 +541,24 @@ margin: 0;
   padding: 2rem 0;
   height: 150vh;
   position: relative;
-  /* background-image: linear-gradient(to right, #00000079, #00000054), url("https://static.vecteezy.com/system/resources/previews/000/518/632/non_2x/vector-abstract-black-luxury-texture-silk-background-and-cloth-wave.jpg");
+  background-image: url('/images/trails-bg-2.jpg');
+  background-image: linear-gradient(to right, #00000079, #00000054), url("https://static.vecteezy.com/system/resources/previews/000/518/632/non_2x/vector-abstract-black-luxury-texture-silk-background-and-cloth-wave.jpg");
   background-image: linear-gradient(to right, #00000079, #00000054), url("https://static.vecteezy.com/system/resources/previews/007/105/010/non_2x/luxury-abstract-background-with-golden-and-black-shapes-metal-texture-steel-background-vactor-design-illustration-free-vector.jpg");
-  background-image: url('/images/trails-bg-2.jpg');*/
-  background-image: radial-gradient(#00000041, #000000b2), url("/images/galaxyc-1.jpg"); 
-  background-image: radial-gradient(#00000011, #000000b6), url("https://images.pexels.com/photos/16218757/pexels-photo-16218757/free-photo-of-blowing-twisted-smoke-and-fire.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"); 
-  background-image: url("https://images.pexels.com/photos/942560/pexels-photo-942560.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"); 
+  background-image: radial-gradient(#00000041, #000000b2), url("/images/galaxyc-1.jpg");
   background-color: white;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   background-size: cover;
-  background-position-y: 20%;
+  background-position-y: 90%;
 /* background-position-x: -200px;
 background-position-y: -150px; */
 background-repeat: no-repeat;
 }
 
-.our-work::after{
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  background-color: #00000050;
-  backdrop-filter: blur(4px);
-  z-index: 1;
-}
-
 .our-work h2{
-  /* position: absolute;
+  position: absolute;
   right: 50%;
   top: 50%;
-  transform: translate(50%,-50%); */
+  transform: translate(50%,-50%);
   display: grid;
   place-items: center;
   padding: 1rem;
@@ -582,102 +567,28 @@ background-repeat: no-repeat;
   border-radius: 50%;
   height: 250px;
   width: 250px;
-  color: rgb(0, 0, 0);
   color: white;
   text-align: center;
   letter-spacing: 3px;
-  border: 1px solid rgb(255, 255, 255);
+  border: 1px solid white;
 }
 
 
-
-.work-card-grid{
+.our-work .work-card{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 200px;
+  border: 2px dashed white;
+  border-radius: 10px;
   position: absolute;
-  display: grid;
-  grid-template-columns: repeat(4,1fr);
-  grid-template-rows: repeat(3,1fr);
-  place-items: center;
-  column-gap: 2rem;
-  row-gap: 1rem;
-  z-index: 2;
-  width: 100%;
 }
-
-.work-card-grid {
-  position: absolute;
-  place-items: center;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 2rem;
-  grid-row-gap: 1rem;
-  z-index: 2;
-  width: 90%;
-  /* margin: 1rem 2rem; */
-  }
-  
-  .work-card-grid h2 { grid-area: 2 / 3 / 3 / 4; }
-  #work-card-1 { grid-area: 1 / 2 / 2 / 3; }
-  #work-card-2{ grid-area: 2 / 1 / 3 / 2; }
-  #work-card-3 { grid-area: 3 / 2 / 4 / 3; }
-  #work-card-4 { grid-area: 1 / 4 / 2 / 5; }
-  #work-card-5 { grid-area: 2 / 5 / 3 / 6; }
-  #work-card-6 { grid-area: 3 / 4 / 4 / 5; }
-
-.work-card-content {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 20px 20px 2rem 20px;
-  color: #fff;
-  /* background: linear-gradient(to top, rgb(0, 0, 0, 0.9), rgba(0, 0, 0, 0)); */
-  background-image: linear-gradient(to top,
-    rgba(0, 0, 0, 1.0) 0%, 
-    rgba(0, 0, 0, 0.9) 10%,
-    rgba(0, 0, 0, 0.8) 20%,
-    rgba(0, 0, 0, 0.7) 30%,
-    rgba(0, 0, 0, 0.6) 40%,
-    rgba(0, 0, 0, 0.5) 50%,
-    rgba(0, 0, 0, 0.4) 60%,
-    rgba(0, 0, 0, 0.3) 70%,
-    rgba(0, 0, 0, 0.2) 80%,
-    rgba(0, 0, 0, 0.1) 90%,
-    rgba(0, 0, 0, 0.0) 100%);
-    background-image: linear-gradient(to top,
-    rgba(0, 0, 0, 1.0) 0%, 
-    rgba(0, 0, 0, 0.9) 10%,
-    rgba(0, 0, 0, 0.8) 20%,
-    rgba(0, 0, 0, 0.7) 30%,
-    rgba(0, 0, 0, 0.7) 40%,
-    rgba(0, 0, 0, 0.7) 50%,
-    rgba(0, 0, 0, 0.5) 60%,
-    rgba(0, 0, 0, 0.3) 70%,
-    rgba(0, 0, 0, 0.2) 80%,
-    rgba(0, 0, 0, 0.1) 90%,
-    rgba(0, 0, 0, 0.0) 100%);
-  transition: all 0.3s;
-  transform: translateY(67%);
-}
-
-.work-card:hover{
-  transform: translateY(-10px);
-  box-shadow: 0 0 150 10px #00000096;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
-
-.work-card:hover .work-card-content{
-
-  transform: translateY(0%);
-}
-
 .work-card .heading h5{
 color: white;
-/* text-decoration: underline;
+text-decoration: underline;
 text-decoration-skip-ink: auto;
-text-underline-offset: 5px; */
-text-align: center;
+text-underline-offset: 5px;
 font-size: 1.3rem;
 margin: 0.8rem 0;
 }
@@ -686,80 +597,36 @@ margin: 0.8rem 0;
   font-size: 1rem;
   text-align: center;
   line-height: 1.2;
-  margin: 0.7rem 0rem;
+  margin: 0.7rem 0.3rem;
   }
-  .our-work h2{
-    position: absolute;
-    border-radius: 50%;
-    height: 250px;
-    width: 250px;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    letter-spacing: 3px;
-    border: 1px solid rgb(255, 255, 255);
-    z-index: 2;
-    
-  }
-
- .our-work .work-card{
-  border-radius: 10px;
-
-  background-size: cover;
-  z-index: 2;
- }
- .our-work .work-card {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  width: 210px;
-  height: 260px;
-  /* border: 2px dashed white; */
-  border-radius: 10px;
-  z-index: 2;
-  overflow: hidden;
-}
- .work-card .work-card-content{
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
- }
   #work-card-1{
 /* position: absolute; */
-/* left: 23%;
-top: 7%; */
-background-image: url('https://cdn.pixabay.com/photo/2015/07/28/22/05/child-865116_1280.jpg');
+left: 25%;
+top: 13%;
   }
   #work-card-2{
     /* position: absolute; */
-    /* left: 3%;
-    top: 39%; */
-    background-image: url('https://images.unsplash.com/photo-1593113646773-028c64a8f1b8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80');
+    left: 3%;
+    top: 39%;
   }
   #work-card-3{
     /* position: absolute; */
-    /* left: 23%;
-    top: 65%; */
-    background-image: url('https://cdn.pixabay.com/photo/2020/05/31/04/36/investment-5241253_1280.jpg');
+    left: 25%;
+    top: 63%;
   }
   #work-card-4{
     /* position: absolute; */
-    /* right: 23%;
-    top: 7%; */
-    background-image: url('https://images.unsplash.com/photo-1536856136534-bb679c52a9aa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80');
+    right: 25%;
+    top: 13%;
   }
   #work-card-5{
     /* position: absolute; */
-    /* right: 3%;
-    top: 39%; */
-    background-image: url('https://images.pexels.com/photos/8447849/pexels-photo-8447849.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+    right: 3%;
+    top: 39%;
   }
   #work-card-6{
-    /* right: 22%;
-    top: 65%; */
-    background-image: url('https://feeds.abplive.com/onecms/images/uploaded-images/2023/01/10/6ff39e745960f1866d3ed28ad5f4bcee1673323824525369_original.jpg?impolicy=abp_cdn&imwidth=720');
+    right: 20%;
+    top: 63%;
   }
   .blink-in{
   opacity: 1;
@@ -768,8 +635,7 @@ background-image: url('https://cdn.pixabay.com/photo/2015/07/28/22/05/child-8651
 
 /*styling for story section starts*/
 .story-container{
-  /* height: 100vh; */
-  padding: 2rem 0;
+  height: 100vh;
 }
 .story-container h2{
   text-align: center;
@@ -2294,18 +2160,15 @@ flex-direction: column;
   }
 
   .hero {
-    background-image: url('../images/hero-1.jpg');
-    background-size: contain; 
-    background-repeat: no-repeat;
     position: relative;
-    /* transform: translateY(20%); */
+    /* transform: translateY(-100%); */
     height: 100vh;
     width: 100vw;
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr;
     animation-timing-function: linear;
-    background-position-y: 63%;
+    /* background-position-y: -100%; */
     /* display: grid;
     place-items: center;
     justify-content: center; */
@@ -2317,19 +2180,17 @@ flex-direction: column;
     position: absolute;
     height: 100%;
     width: 100%;
-    background-color: #00000042;
-    z-index: 2;
+    background-color: #00000056;
+    z-index: -1;
   }
   
   .htext-wrapper {
-    /* position: absolute; */
+    position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
+    display: grid;
+    place-items: center;
     padding-top: 2rem;
     z-index: 3;
   }
@@ -2351,7 +2212,7 @@ flex-direction: column;
   
   #htext {
     font-size: 2rem;
-    margin-top: 13%;
+    margin-top: 50%;
     width: 100%;
     display: inline-block;
     text-align: center;
@@ -2370,18 +2231,16 @@ flex-direction: column;
   display: inline-block;
   position: relative;
   z-index: 3;
-  /* margin-top: -18rem; */
-  margin-bottom: 11%;
+  margin-top: -18rem;
   }
   
   .hero-img{
     height: 100vh;
-    width: 50vw;
+    width: 100vw;
     position: absolute;
     left: 0;
     top: 0;
     z-index: -1;
-    display: none;
   }
   
   .hero-img img{
@@ -2435,48 +2294,43 @@ flex-direction: column;
   }
 
   .our-work h2{
-    position: static;
     top: 10%;
-         transform: translate(0%,0%);
   }
 .our-work{
-  height: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 1rem;
-  background-position-x: 30%;
-}
-
-.our-work .work-card{
-  position: static;
-  width: 250px;
-  width: 250px;
-}
-.work-card .heading h5{
-  margin: -0.2rem 0 1rem;
-}
-.work-card-grid {
-  position: static;
-  place-items: center;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(7, 1fr);
-  grid-row-gap: 1rem;
-  z-index: 2;
-  width: 90%;
-  /* margin: 1rem 2rem; */
-  }
   
-  .work-card-grid h2 { grid-area: 1 / 1 / 2 / 2; }
-  #work-card-1 { grid-area: 2 / 1 / 3 / 2; }
-  #work-card-2{ grid-area: 3 / 1 / 4 / 2; }
-  #work-card-3 { grid-area: 4 / 1 / 5 / 2; }
-  #work-card-4 { grid-area: 5 / 1 / 6 / 2; }
-  #work-card-5 { grid-area: 6 / 1 / 7 / 2; }
-  #work-card-6 { grid-area: 7 / 1 / 8 / 2;  }
-
+  background-attachment: fixed;
+  background-image: linear-gradient(to right, #000000c3, #0000004a), url("../images/galaxyc-2.jpg");
+  height: 400vh;
+}
+  #work-card-1{
+    /* position: absolute; */
+    left: 25%;
+    top: 18%;
+      }
+      #work-card-2{
+        /* position: absolute; */
+        left: 25%;
+        top: 30%;
+      }
+      #work-card-3{
+        /* position: absolute; */
+        left: 25%;
+        top: 42%;
+      }
+      #work-card-4{
+        /* position: absolute; */
+        left: 25%;
+        top: 54%;
+      }
+      #work-card-5{
+        /* position: absolute; */
+        left: 25%;
+        top: 66%;
+      }
+      #work-card-6{
+        left: 25%;
+        top: 78%;
+      }
   /* .faqSection{
     padding-bottom: 580px;
   } */
