--- a/css/community.css
+++ b/css/community.css
@@ -450,6 +450,9 @@ margin-bottom: 30%;
   background-image: linear-gradient(to right, #00000087, #00000036), url("https://static.vecteezy.com/system/resources/previews/007/696/703/large_2x/abstract-circle-light-neon-effect-illustration-free-vector.jpg");
   background-image: linear-gradient(to right, #00000087, #00000036), url("/images/trails.jpg");
   background-image: linear-gradient(to right, #00000087, #00000036), url("https://w0.peakpx.com/wallpaper/214/1022/HD-wallpaper-abstract-dark-abstract-dark.jpg");
+  background-image: linear-gradient(to right, #0000005b, #00000036), url("https://static.vecteezy.com/system/resources/previews/010/705/558/non_2x/orange-modern-abstract-background-for-banner-landing-page-poster-presentation-or-flyer-free-vector.jpg");
+  background-image: url("https://static.vecteezy.com/system/resources/previews/010/705/558/non_2x/orange-modern-abstract-background-for-banner-landing-page-poster-presentation-or-flyer-free-vector.jpg");
+  background-image: url("../images/c-bg.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 45%;
@@ -467,8 +470,8 @@ margin-bottom: 30%;
   display: inline-block;
   height: 100%;
   width: 100%;
-  background-color: #00000050;
-  backdrop-filter: blur(2px);
+  background-color: #00000040;
+  /* backdrop-filter: blur(2px); */
   z-index: 1;
 }
 
@@ -575,7 +578,7 @@ margin-bottom: 30%;
   background-image: radial-gradient(#00000011, #000000b6), url("https://images.pexels.com/photos/16218757/pexels-photo-16218757/free-photo-of-blowing-twisted-smoke-and-fire.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"); 
   background-image: url("https://images.pexels.com/photos/942560/pexels-photo-942560.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"); 
   background-image: url("https://img.freepik.com/free-vector/seamless-gold-rhombus-grid-pattern-black-background_53876-97589.jpg?w=1060&t=st=1689327002~exp=1689327602~hmac=293219e0fcbbbb5ddd8611e3ae537fce9850c52fad3a9d36399165b575197a28");  */
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   background-color: rgba(0, 0, 0, 0);
   background-size: cover;
   background-position-y: 20%;
@@ -585,7 +588,7 @@ background-repeat: no-repeat;
 }
 .bondedSection{
   position: relative;
-  background-size: cover;background-repeat: no-repeat;
+  background-size: cover;background-repeat: no-repeat;background-attachment:fixed;
 }
 
 .bondedSection::after{
@@ -784,36 +787,36 @@ margin: 0.8rem 0;
 /* position: absolute; */
 /* left: 23%;
 top: 7%; */
-background-image: url('https://cdn.pixabay.com/photo/2015/07/28/22/05/child-865116_1280.jpg');
+/* background-image: url('https://cdn.pixabay.com/photo/2015/07/28/22/05/child-865116_1280.jpg'); */
   }
   #work-card-2{
     /* position: absolute; */
     /* left: 3%;
     top: 39%; */
-    background-image: url('https://images.unsplash.com/photo-1593113646773-028c64a8f1b8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80');
+    /* background-image: url('https://images.unsplash.com/photo-1593113646773-028c64a8f1b8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80'); */
   }
   #work-card-3{
     /* position: absolute; */
     /* left: 23%;
     top: 65%; */
-    background-image: url('https://cdn.pixabay.com/photo/2020/05/31/04/36/investment-5241253_1280.jpg');
+    /* background-image: url('https://cdn.pixabay.com/photo/2020/05/31/04/36/investment-5241253_1280.jpg'); */
   }
   #work-card-4{
     /* position: absolute; */
     /* right: 23%;
     top: 7%; */
-    background-image: url('https://images.unsplash.com/photo-1536856136534-bb679c52a9aa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80');
+    /* background-image: url('https://images.unsplash.com/photo-1536856136534-bb679c52a9aa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80'); */
   }
   #work-card-5{
     /* position: absolute; */
     /* right: 3%;
     top: 39%; */
-    background-image: url('https://images.pexels.com/photos/8447849/pexels-photo-8447849.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+    /* background-image: url('https://images.pexels.com/photos/8447849/pexels-photo-8447849.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); */
   }
   #work-card-6{
     /* right: 22%;
     top: 65%; */
-    background-image: url('https://feeds.abplive.com/onecms/images/uploaded-images/2023/01/10/6ff39e745960f1866d3ed28ad5f4bcee1673323824525369_original.jpg?impolicy=abp_cdn&imwidth=720');
+    /* background-image: url('https://feeds.abplive.com/onecms/images/uploaded-images/2023/01/10/6ff39e745960f1866d3ed28ad5f4bcee1673323824525369_original.jpg?impolicy=abp_cdn&imwidth=720'); */
   }
   .blink-in{
   opacity: 1;
