--- a/css/style.css
+++ b/css/style.css
@@ -71,107 +71,6 @@ button {
   font-family: "Alata", sans-serif;
 }
 
-/* styling for navbar starts */
-
-/* Navbar section */
-
-.nav {
-  width: 100%;
-  height: 65px;
-  position: fixed;
-  background-color: transparent;
-  z-index: 5;
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  gap: 2rem;
-}
-
-.nav .nav-bg {
-  content: '';
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 65px;
-  background-color: #000000a8;
-  -webkit-backdrop-filter: blur(8px);
-  backdrop-filter: blur(8px);
-  z-index: -1;
-}
-
-.nav .logo a {
-  font-family: 'Blanka', sans-serif;
-  text-decoration: none;
-  font-size: 2rem;
-  color: #d8b55b;
-  margin-left: 1.8rem;
-}
-
-#mheading{
-  font-family: 'Blanka', sans-serif;
-  font-size: 2rem;
-  display: inline-block;
-}
-
-.nav .links {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  font-size: 1.4rem;
-  gap: 2rem;
-  font-family: 'Archive', sans-serif;
-  padding-top: 0.5rem;
-  margin-left: -0.5rem;
-}
-
-.nav .links span a {
-  text-decoration: none;
-  /* color: #fff3eb;
-  color: #676767; */
-  color: silver;
-  padding: 0;
-  transition: 0.3s ease-in-out;
-  position: relative;
-  z-index: 1;
-  text-align: center;
-  display: inline-block;
-}
-
-
-
-/*code to add a center animated line below the nav links starts*/
-
-.nav .links span a::after{
-  content: '';
-  display: block;
-  position: relative;
-  bottom: -0.8rem;
-  margin: auto;
-  height: 2px;
-  width: 0;
-  background-color: #d8b55b;
-}
-
-.nav .links span a:hover::after{
-  width: 100%;
-  transition: width 0.3s ease-in;
-}
-
-.nav .links span.active a::after{
-  width: 100%;
-}
-
-.nav .links span.active a{
-  color: #d8b55b!important;
-}
-
-/*code to add a center animated line below the nav links ends*/
-.toggle_btn {
-  color: #fff3eb;
-  display: none;
-}
-
-/*styling for navbar ends*/
 
 /* Home section */
 
@@ -186,61 +85,7 @@ button {
 
 
 
-@media (max-width:769px) {
 
-  .nav .links {
-    position: relative;
-    font-size: 1.3rem;
-  }
-}
-
-@media screen and (max-width:426px) {
-  .toggle_btn {
-    display: inline;
-    position: absolute;
-    right: 2rem;
-    font-size: 1.7rem;
-  }
-
-  .nav .links {
-    position: absolute;
-    left: 50%;
-    /* visibility: hidden; */
-    transform: translateX(-50%);
-    font-size: 1.3rem;
-    flex-direction: column;
-    /* top: 5.615rem; */
-    opacity: 0;
-    top: -17rem;
-    z-index: 2;
-    /* transition: 0.3s ease-in-out; */
-    transition: top 0.5s ease-in-out;
-  }
-
-  .nav .links.linksPos {
-    top: 5.615rem;
-    opacity: 1;
-    transition: opacity 1s ease-in-out;
-
-  }
-
-  .nav .links+.links-bg {
-    position: absolute;
-    top: 4rem;
-    height: 0;
-    width: 110vw;
-    background-color: #000000a8;
-    -webkit-backdrop-filter: blur(3px);
-    backdrop-filter: blur(3px);
-    z-index: -1;
-    transition: height 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  }
-
-  .nav .links+.links-bg.open {
-    height: 48dvh;
-  }
-
-}
 
 /*styling for navbar ends*/
 
@@ -627,124 +472,6 @@ button {
 
 }
 
-svg#freepik_stories-bitcoin-p2p:not(.animated) .animable {
-  opacity: 0;
-}
-
-svg#freepik_stories-bitcoin-p2p.animated #freepik--background-complete--inject-30 {
-  animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) zoomOut;
-  animation-delay: 0s;
-}
-
-svg#freepik_stories-bitcoin-p2p.animated #freepik--Plant--inject-30 {
-  animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) slideUp;
-  animation-delay: 0s;
-}
-
-svg#freepik_stories-bitcoin-p2p.animated #freepik--Floor--inject-30 {
-  animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) slideDown;
-  animation-delay: 0s;
-}
-
-svg#freepik_stories-bitcoin-p2p.animated #freepik--Shadows--inject-30 {
-  animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) lightSpeedLeft;
-  animation-delay: 0s;
-}
-
-svg#freepik_stories-bitcoin-p2p.animated #freepik--Coins--inject-30 {
-  animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) slideLeft;
-  animation-delay: 0s;
-}
-
-svg#freepik_stories-bitcoin-p2p.animated #freepik--character-2--inject-30 {
-  animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) fadeIn;
-  animation-delay: 0s;
-}
-
-svg#freepik_stories-bitcoin-p2p.animated #freepik--character-1--inject-30 {
-  animation: 1s 1 forwards cubic-bezier(.36, -0.01, .5, 1.38) zoomOut;
-  animation-delay: 0s;
-}
-
-@keyframes zoomOut {
-  0% {
-    opacity: 0;
-    transform: scale(1.5);
-  }
-
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
-@keyframes slideUp {
-  0% {
-    opacity: 0;
-    transform: translateY(30px);
-  }
-
-  100% {
-    opacity: 1;
-    transform: inherit;
-  }
-}
-
-@keyframes slideDown {
-  0% {
-    opacity: 0;
-    transform: translateY(-30px);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@keyframes lightSpeedLeft {
-  from {
-    transform: translate3d(-50%, 0, 0) skewX(20deg);
-    opacity: 0;
-  }
-
-  60% {
-    transform: skewX(-10deg);
-    opacity: 1;
-  }
-
-  80% {
-    transform: skewX(2deg);
-  }
-
-  to {
-    opacity: 1;
-    transform: translate3d(0, 0, 0);
-  }
-}
-
-@keyframes slideLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-30px);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
 .growthImg img {
   width: 100%;
   height: 100%;
@@ -772,191 +499,6 @@ svg#freepik_stories-bitcoin-p2p.animated #freepik--character-1--inject-30 {
 }
 
 
-/*bg*/
-/*txt*/
-/*success*/
-.buttonsCta {
-  margin-left: -17px;
-}
-
-.buttonsCta button {
-  width: 150px;
-  height: 50px;
-  background-color: white;
-  background-color: #ff5d00;
-  margin: 20px;
-  color: #568fa6;
-  position: relative;
-  overflow: hidden;
-  font-size: 14px;
-  letter-spacing: 1px;
-  font-weight: 500;
-  text-transform: uppercase;
-  transition: all 0.3s ease;
-  cursor: pointer;
-  border: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 3px;
-  padding: 1rem 6rem;
-}
-
-.buttonsCta button:before,
-.buttonsCta button:after {
-  content: "";
-  position: absolute;
-  width: 0;
-  height: 2px;
-  background-color: #44d8a4;
-  background-color: white;
-  transition: all 0.3s cubic-bezier(0.35, 0.1, 0.25, 1);
-}
-
-.buttonsCta button:before {
-  right: 0;
-  top: 0;
-  transition: all 0.5s cubic-bezier(0.35, 0.1, 0.25, 1);
-}
-
-.buttonsCta button:after {
-  left: 0;
-  bottom: 0;
-}
-
-.buttonsCta button span {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  margin: 0;
-  padding: 0;
-  z-index: 1;
-}
-
-.buttonsCta button span:before,
-.buttonsCta button span:after {
-  content: "";
-  position: absolute;
-  width: 2px;
-  height: 0;
-  background-color: #44d8a4;
-  background-color: #fff;
-  transition: all 0.3s cubic-bezier(0.35, 0.1, 0.25, 1);
-}
-
-.buttonsCta button span:before {
-  right: 0;
-  top: 0;
-  transition: all 0.5s cubic-bezier(0.35, 0.1, 0.25, 1);
-}
-
-.buttonsCta button span:after {
-  left: 0;
-  bottom: 0;
-}
-
-.buttonsCta button p {
-  padding: 0;
-  margin: 0;
-  transition: all 0.4s cubic-bezier(0.35, 0.1, 0.25, 1);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-.buttonsCta button p:before,
-.buttonsCta button p:after {
-  position: absolute;
-  width: 100%;
-  transition: all 0.4s cubic-bezier(0.35, 0.1, 0.25, 1);
-  z-index: 1;
-  left: 0;
-}
-
-.buttonsCta button p:before {
-  content: attr(data-title);
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.buttonsCta button p:after {
-  content: attr(data-text);
-  top: 150%;
-  color: #44d8a4;
-  color: #fff;
-}
-
-.buttonsCta button:hover:before,
-.buttonsCta button:hover:after {
-  width: 100%;
-}
-
-.buttonsCta button:hover span {
-  z-index: 1;
-}
-
-.buttonsCta button:hover span:before,
-.buttonsCta button:hover span:after {
-  height: 100%;
-}
-
-.buttonsCta button:hover p:before {
-  top: -50%;
-  transform: rotate(3deg);
-}
-
-.buttonsCta button:hover p:after {
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.buttonsCta button.start {
-  background-color: #44d8a4;
-  background-color: #fff;
-  box-shadow: 0px 5px 10px -10px rgba(0, 0, 0, 0.2);
-  transition: all 0.2s ease;
-}
-
-.buttonsCta button.start p:before {
-  top: -50%;
-  transform: rotate(5deg);
-}
-
-.buttonsCta button.start p:after {
-  color: white;
-  transition: all 0s ease;
-  content: attr(data-start);
-  top: 50%;
-  transform: translateY(-50%);
-  animation: start 0.3s ease;
-  animation-fill-mode: forwards;
-}
-
-@keyframes start {
-  from {
-    top: -50%;
-  }
-}
-
-.buttonsCta button.start:hover:before,
-.buttonsCta button.start:hover:after {
-  display: none;
-}
-
-.buttonsCta button.start:hover span {
-  display: none;
-}
-
-.buttonsCta button:active {
-  outline: none;
-  border: none;
-}
-
-.buttonsCta button:focus {
-  outline: 0;
-}
 
 .copy-button {
   padding: 6px 12px;
@@ -1048,35 +590,6 @@ svg#freepik_stories-bitcoin-p2p.animated #freepik--character-1--inject-30 {
 .tooltip {
   position: relative;
   display: inline-block;
-}
-
-/* Tooltip text */
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: #000;
-  color: #fff;
-  text-align: center;
-  border-radius: 4px;
-  padding: 5px;
-  position: absolute;
-  bottom: 125%;
-  left: 50%;
-  transform: translateX(-50%);
-  opacity: 0;
-  transition: opacity 0.3s ease-in;
-}
-
-/* Show tooltip when copied to clipboard */
-.tooltip:active .tooltiptext {
-  visibility: visible;
-  opacity: 1;
-}
-
-/* Keep contract address selected */
-.tooltip span::selection {
-  background-color: #ff6f00;
-  color: white;
 }
 
 /*styling for callToAction Section ends*/
@@ -1204,10 +717,12 @@ column-gap: 4rem;
   height: 15rem;
   width: 15rem;
   padding: 1rem;
-  color: white;
+  color: #fff!important;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   position: relative;
   z-index: 0;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .ucCard::after{
@@ -1232,45 +747,45 @@ column-gap: 4rem;
 
 #uc1{
   /* background-image: linear-gradient(to right, #000000a2, #00000072), url("../images/uc1.webp"); */
-  background-size: cover;
-  background-repeat: no-repeat;
+  /* background-size: cover;
+  background-repeat: no-repeat; */
 }
 #uc2{
   /* background-image: linear-gradient(to right, #000000a2, #00000072), url("../images/uc2.webp"); */
   color: white;
-  background-size: cover;
+  /* background-size: cover; */
   background-position-x: 50%;
   /* background-position-y: 45%; */
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat; */
 }
 #uc3{
   /* background-image: linear-gradient(to right, #000000a2, #00000072), url("../images/uc3.webp"); */
   background-size: cover;
   background-position-x: 50%;
   /* background-position-y: 45%; */
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat; */
 }
 #uc4{
   /* background-image: linear-gradient(to right, #000000a2, #00000072), url("../images/uc4.webp"); */
-  color: rgb(255, 255, 255);
-  background-size: cover;
+  color: #ffffff;
+  /* background-size: cover; */
   background-position-x: 50%;
   /* background-size: 15rem 15rem; */
   /* background-repeat: no-repeat; */
 }
 #uc5{
   /* background-image: linear-gradient(to right, #000000a2, #00000072), url("../images/uc5.webp"); */
-  color: black;
-  color: white;
-  background-size: cover;
-  background-repeat: no-repeat;
+  /* color: black; */
+  /* color: white; */
+  /* background-size: cover; */
+  /* background-repeat: no-repeat; */
 }
 #uc6{
   /* background-image: linear-gradient(to right, #000000b7, #00000096), url("../images/uc6.webp"); */
-  color: white;
-  background-size: cover;
+  /* color: white; */
+  /* background-size: cover; */
   background-position-x: 80%;
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat; */
 }
 /*styling for use case section ends*/
 
@@ -1598,32 +1113,9 @@ footer .social-links .links a:hover {
 
 }
 
-@media (max-width:1440px){
-  /*media queries to keep the nav links part only in half of the screen width*/
 
-  .nav .logo a {
-    font-size: 1.6rem;
-    margin-left: 1rem;
-  }
-  
-  .nav .links {
-    font-size: 1.3rem;
-    gap: 0.8rem;
-    margin-left: -0.5rem;
-  }
-}
 
 @media(max-width:1025px) {
-  .nav .logo a {
-    font-size: 1.6rem;
-    margin-left: 0.5rem;
-  }
-  
-  .nav .links {
-    font-size: 1.15rem;
-    gap: 0.7rem;
-    margin-left: -1.2rem;
-}
   
   .section-rmap {
     padding: 0 20rem;
@@ -1744,16 +1236,7 @@ footer .social-links .links a:hover {
 }
 
 @media(max-width:426px) {
-  .nav .logo a {
-    font-size: 2rem;
-    margin-left: 1rem;
-  }
-  
-  .nav .links {
-    font-size: 1.3rem;
-    gap: 2rem;
-    margin-left: 0;
-}
+
   .hero .coin img {
     width: 300px;
     height: 300px;
@@ -1800,7 +1283,7 @@ footer .social-links .links a:hover {
     align-items: unset;
     gap:2.1rem;
     margin-top: 2rem;
-    
+    margin-left: -0.75rem;
   }
   /* .faqSection{
     padding-bottom: 580px;
@@ -1827,5 +1310,8 @@ grid-template-areas:  "faq"
     width: 290px;
     height: 290px;
     object-fit: cover;
+  }
+  .ctaText p {
+    padding-right: 0em;
   }
 }
